# sshclient

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.c  main.h
